<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_ranking_docto_main"
            android:icon="@drawable/ic_people_black_24dp"
            android:title="@string/ranking_doctor" />
        <item
            android:id="@+id/nav_exchange_money_main"
            android:icon="@drawable/ic_attach_money_black_24dp"
            android:title="Rút tiền khỏi hệ thống"/>
        <item
            android:id="@+id/nav_profile_main"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/profile_page" />
        <item
            android:id="@+id/navAboutUs"
            android:icon="@drawable/ic_book_black_24dp"
            android:title="@string/about_us_page" />
        <item
            android:id="@+id/nav_logout_main"
            android:icon="@drawable/log_out"
            android:title="@string/log_out" />
    </group>
</menu>