<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#fff">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/rl_logo"
        android:layout_height="230dp">
        <ImageView
            android:layout_width="180dp"
            android:layout_height="210dp"
            android:layout_centerInParent="true"
            android:background="@drawable/your_doctor_logo"></ImageView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_logo"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint">

            <com.yd.yourdoctorandroid.custormviews.MyEditText
                android:id="@+id/ed_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:drawableLeft="@drawable/ic_phone_black_24dp"
                android:drawablePadding="12dp"
                android:gravity="left"
                android:hint="@string/phone"
                android:maxLength="12"
                android:padding="16dp"
                android:inputType="phone"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:textSize="16dp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorHint">

            <com.yd.yourdoctorandroid.custormviews.MyEditText
                android:id="@+id/ed_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
                android:drawablePadding="12dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorHint"
                android:textSize="16dp"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/remember"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_weight="2"
                android:buttonTint="@color/colorHint"
                android:checked="false"
                android:text="@string/remember_me"
                android:textColor="@color/colorHint"
                android:textSize="11dp"/>

            <com.yd.yourdoctorandroid.custormviews.MyTextView
                android:id="@+id/forgotpass"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2.3"
                android:text="@string/for_got_password"
                android:textColor="@color/colorHint"
                android:textSize="11dp"/>
        </LinearLayout>

        <!--<com.yd.yourdoctorandroid.custormviews.MyTextView-->
            <!--android:id="@+id/signin1"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginBottom="11dp"-->
            <!--android:layout_marginLeft="60dp"-->
            <!--android:layout_marginRight="60dp"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:background="@drawable/rect1"-->
            <!--android:elevation="3dp"-->
            <!--android:gravity="center"-->
            <!--android:padding="12dp"-->
            <!--android:text="@string/sign_in"-->
            <!--android:textColor="#fff"-->
            <!--android:textStyle="bold"-->
            <!--android:textSize="18dp"/>-->

        <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
            android:id="@+id/btn_sign_in"
            android:layout_width="270dp"
            android:layout_height="50dp"
            android:layout_below="@id/til_address"
            android:layout_gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@drawable/buttonshape"
            android:gravity="center"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/sign_in"
            android:textColor="@color/primary_text"
            android:textSize="20sp"
            app:spinning_bar_color="#FFF"
            app:spinning_bar_padding="6dp"
            app:spinning_bar_width="4dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <com.yd.yourdoctorandroid.custormviews.MyTextView
                android:id="@+id/or"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:lines="1"
                android:text="@string/dont_have_account"
                android:textColor="@color/colorHint"/>
            <TextView
                android:id="@+id/tv_signup"
                android:textStyle="bold"
                android:textSize="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:lines="1"
                android:text="@string/sign_up"
                android:textColor="@color/colorHint"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
